BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/TRECNET_Topic_BMS__c.object
<CustomObject>
    <fields>
        <fullName>BMS_TRECNET_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TRECNET Created ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_BMS__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_BMS_IC__c</fullName>
        <description>Site at which TRECNET Topic is being used</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_BMS_IC__c</fullName>
        <description>TRECNet letter issue date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_BMS__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_BMS__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRECNET_ID_BMS__c</fullName>
        <label>TRECNET ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TRECNET Topic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_BMS__c</columns>
        <columns>Category_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TRECNET Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TRECNET Topics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>